tests/e2e/app_prop_type_check2.error
Error: syntax error in story at line 2, column 1

2|    a = app.version
      ^^^^^^^^^^^^^^^

E0100: Can't assign `string` to `int`
