tests/e2e/app_prop_type_check2.story
a = 124
a = app.version
